quest redesign
